[package]
name = "tuple_split"
version = "0.2.4"
edition = "2021"
license = "MIT"
keywords = ["tuples", "split", "tupleops", "const", "utility"]
categories = ["rust-patterns", "no-std::no-alloc"]
description = "An extension for the tupleops crate which adds a trait for splitting tuples."
repository = "https://github.com/sigurd4/tuple_split"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "tuple_split"

[features]
default = ["default-len"]
default-len = ["16"]
max-len = ["256"]

8 = ["tupleops/8"]
16 = ["8", "tupleops/16"]
32 = ["16", "tupleops/32"]
64 = ["32", "tupleops/64"]
96 = ["64", "tupleops/96"]
128 = ["96", "tupleops/128"]
160 = ["128", "tupleops/160"]
192 = ["160", "tupleops/192"]
224 = ["192", "tupleops/224"]
256 = ["224", "tupleops/256"]
dont_hurt_yourself_by_using_all_features = ["tupleops/dont_hurt_yourself_by_using_all_features"]

[dependencies]
tupleops = {version = "0.1.1", default-features = false, features = ["concat"]}
blk_count_macro = "0.1.1"